# task_ws

./: .clang-format  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  build.sh  build_and_test.sh  ci.sh  install.sh
.github/workflows/: main.yml
src/sine_wave_cpp/: CMakeLists.txt  package.xml
src/sine_wave_cpp/config/: plot.xml  sine_wave_parameters.yaml
src/sine_wave_cpp/include/sine_wave_cpp/: sine_wave_publisher.hpp  sine_wave_receiver.hpp  sine_wave_reciever.hpp
src/sine_wave_cpp/launch/: sine_wave_cpp.launch  sine_wave_cpp.launch.py
src/sine_wave_cpp/sine_wave_interface/msg/: Signal.msg
src/sine_wave_cpp/src/: sine_wave_publisher.cpp  sine_wave_publisher_node.cpp  sine_wave_receiver.cpp  sine_wave_receiver_node.cpp  sine_wave_reciever.cpp  sine_wave_reciever_node.cpp
src/sine_wave_cpp/srv/: ConvertImage.srv
src/sine_wave_cpp/test/: sine_wave_publisher_test.cpp  sine_wave_receiver_test.cpp  sine_wave_reciever_test.cpp
src/sine_wave_py/: package.xml  setup.cfg  setup.py
src/sine_wave_py/config/: sine_wave_parameters.yaml
src/sine_wave_py/launch/: sine_wave_py.launch.py
src/sine_wave_py/sine_wave_interface/msg/: Signal.msg
src/sine_wave_py/sine_wave_py/: __init__.py  sine_wave_publisher.py  sine_wave_publisher_node.py  sine_wave_receiver.py  sine_wave_receiver_node.py
src/sine_wave_py/test/: __init__.py  test_sine_wave_publisher.py  test_sine_wave_receiver.py
