<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>sine_wave_py</name>
  <version>0.0.0</version>
  <description>Python version of sine_wave_cpp package</description>
  <maintainer email="ziou@tum.de">user</maintainer>
  <license>Apache-2.0</license>

  <depend>sine_wave_cpp</depend>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>opencv2</depend>
  <depend>generate_parameter_library</depend>
  <depend>generate_parameter_library_py</depend>

  <exec_depend>rosidl_default_runtime</exec_depend>
  <exec_depend>python3-opencv</exec_depend>
  <exec_depend>python3-numpy</exec_depend>

  <!-- <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend> -->
  <test_depend>ament_cmake_pytest</test_depend>
  <test_depend>python3-pytest</test_depend>
  <test_depend>ament_pycodestyle</test_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <buildtool_depend>ament_python</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
